Update for Java 8